# functional-cpp-book

./: .gitmodules
.github/workflows/: c-cpp.yml
chapter-01/: CMakeLists.txt
chapter-01/count-lines-stdcount/: main.cpp
chapter-01/count-lines-transform/: main.cpp
chapter-02/: CMakeLists.txt
chapter-02/2 proposed exercices/: Makefile  main.cpp
chapter-02/2.1-3 average-score/: Makefile  main.cpp
chapter-02/2.11-15 filter-and-transform-combined/: Makefile  main.cpp
chapter-02/2.16 moving-accumulate/: main.cpp
chapter-02/2.4 count-lines-using-accumulate/: main.cpp
chapter-02/2.6 move-selected/: Makefile  main.cpp
chapter-02/2.7 filtering-using-remove-if/: Makefile  main.cpp
chapter-02/2.8-9 filter-and-transform/: main.cpp
chapter-03/: CMakeLists.txt
chapter-03/3.1 older-than-generic/: main.cpp
chapter-03/3.3 counting-team-members/: Makefile  main.cpp
chapter-04/: CMakeLists.txt
chapter-04/4.10-11 printing-people/: main.cpp
chapter-04/4.19 knuth-problem/: main.cpp
chapter-06/6.1-3 lazy-val/: main.cpp
chapter-06/6.1-3... lazy-sort/: main.cpp
chapter-06/6.10 string-concatenation/: main.cpp
chapter-06/6.11 string-concatenation-refs/: main.cpp
chapter-06/6.4-5 fibonacci/: main.cpp
chapter-06/6.7-8 generalized-memoization/: main.cpp
chapter-06/6.9 recursive-memoization/: main.cpp
chapter-07/7.4 top-movies/: main.cpp
chapter-07/7.5 word-frequency/: main.cpp
chapter-07/top-movies/: main.cpp
chapter-07/word-frequency/: main.cpp
chapter-09/9.4 word-counting-states/: main.cpp
chapter-10/10.1 functors-optional/: main.cpp
chapter-10/10.1. monad-optional/: main.cpp
chapter-10/10.1.. monad-range/: main.cpp
chapter-10/10.1... monad-vector/: main.cpp
chapter-10/functors-optional/: main.cpp
chapter-10/monad-range/: main.cpp
chapter-11/11.1-5 contained-type/: main.cpp  type_utils.h
chapter-11/11.6 make-curried/: main.cpp
chapter-11/11.7-8 dsl/: dsl.h  main.cpp  person.h  vehicle.h
chapter-12/12.11-12 bookmark-service-with-repl/: expected.h  filter.h  (+7 more)
(+18 files in other folders)
